--- a/index.html
+++ b/index.html
@@ -13,11 +13,21 @@
     <nav>
         <p>My page</p>
         <ul>
-            <li><a href="#services">Services</a></li>
-            <li><a href="#customers">Customers</a></li>
-            <li>Patners</li>
-            <li>Team</li>
-            <li>Contact</li>
+            <li>
+                <a href="#services">Services</a>
+            </li>
+            <li>
+                <a href="#customers">Customers</a>
+            </li>
+            <li>
+                <a href="#patners">Patners</a>
+            </li>
+            <li>
+                <a href="#team">Team</a>
+            </li>
+            <li>
+                <a href="#contact">Contact</a>
+            </li>
         </ul>
     </nav>
 
@@ -71,22 +81,47 @@
         </p>
 
         <div>
-            <img src="./img/Logo1.jpg" width="360px">
-            <img src="./img/logo2.jpg" width="360px">
-            <img src="./img/logo3.jpg" width="360px">
+            <a
+                href="https://br.freepik.com/vetores-gratis/m-letter-template-logo_840925.htm#page=1&query=brand%20logo&position=41">
+                <img src="./img/Logo1.jpg" width="360px">
+            </a>
+            <a
+                href="https://br.freepik.com/vetores-gratis/modelo-de-logotipo-de-gradiente-com-forma-abstrata_4838500.htm#page=1&query=brand%20logo&position=37">
+                <img src="./img/2562979.jpg" width="360px">
+            </a>
+            <a href="https://br.freepik.com/psd-gratuitas/maquete-do-logotipo_6627107.htm#page=1&query=brand%20logo&position=44">
+                <img src="./img/logo3.jpg" width="360px">
+            </a>
         </div>
 
-    </section >
+    </section>
 
     <section id="team">
         <h2>Our team</h2>
-        
+
         <p>
-                Our team works with great quality and commitment to deliver the best product to our customers
+            Our team works with great quality and commitment to deliver the best product to our customers
         </p>
 
         <div>
             <img src="./img/group-of-people-standing-infront-of-blackboard-3184432.jpg" width="1180px">
+        </div>
+
+    </section>
+
+    <section id="contact">
+        <h2>Contact</h2>
+
+        <p>
+            Contact our team
+        </p>
+        <div>
+            <img src="./img/Email-1.png" width="300px">
+            <p><a href="mailto:Contac@empresa.com">Contac@empresa.com</a></p>
+        </div>
+        <div>
+            <img src="./img/Telefone-1.png" width="240px">
+            <p><a href="tel:99990090090">(00) 9900-90090</a></p>
         </div>
 
     </section>
