--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>My page</title>
+    <link rel="stylesheet" type="text/css" href="./css/style.css" >
 </head>
 
 <body>
@@ -81,15 +82,16 @@
         </p>
 
         <div>
-            <a
-                href="https://br.freepik.com/vetores-gratis/m-letter-template-logo_840925.htm#page=1&query=brand%20logo&position=41">
+            <a href="https://br.freepik.com/vetores-gratis/m-letter-template-logo_840925.htm#page=1&query=brand%20logo&position=41"
+                target="_blank">
                 <img src="./img/Logo1.jpg" width="360px">
             </a>
-            <a
-                href="https://br.freepik.com/vetores-gratis/modelo-de-logotipo-de-gradiente-com-forma-abstrata_4838500.htm#page=1&query=brand%20logo&position=37">
+            <a href="https://br.freepik.com/vetores-gratis/modelo-de-logotipo-de-gradiente-com-forma-abstrata_4838500.htm#page=1&query=brand%20logo&position=37"
+                target="_blank">
                 <img src="./img/2562979.jpg" width="360px">
             </a>
-            <a href="https://br.freepik.com/psd-gratuitas/maquete-do-logotipo_6627107.htm#page=1&query=brand%20logo&position=44">
+            <a href="https://br.freepik.com/psd-gratuitas/maquete-do-logotipo_6627107.htm#page=1&query=brand%20logo&position=44"
+                target="_blank">
                 <img src="./img/logo3.jpg" width="360px">
             </a>
         </div>
